fixed animation bug using z-index

--- a/styles/ArtAnimation.module.scss
+++ b/styles/ArtAnimation.module.scss
@@ -3,18 +3,25 @@
 .img3,
 .img4 {
   position: absolute;
-  top: 0;
-  width: 50%;
-  // margin: auto auto;
-  height: 100px;
-  background-size: cover;
-  background-repeat: no-repeat;
+  // top: 0;
+  width: 200px;
+  height: 200px;
+  margin-top: 25%;
+  // background-size: cover;
+  // background-repeat: no-repeat;
   background-position: center;
-  z-index: -18;
+  // z-index: 2;
   opacity: 0;
   animation-name: fade;
   animation-duration: 16s;
   animation-iteration-count: infinite;
+}
+.flexContainer {
+  // z-index: -6;
+  display: flex;
+  flex-direction: column;
+  // justify-content: first baseline;
+  align-items: center;
 }
 
 .img1 {
