--- a/styles/QuizSelection.module.scss
+++ b/styles/QuizSelection.module.scss
@@ -1,22 +1,60 @@
-.pageContainer {
+.container {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 100vh;
+  background: radial-gradient(#3a445c, var(--dark-shades));
 }
+
+@media screen and (max-width: 321px) {
+  .container {
+    padding: 0;
+  }
+}
+
+// .flexContainer {
+//   // z-index: -6;
+//   // display: flex;
+//   // flex-direction: column;
+//   // justify-content: center;
+//   // align-items: center;
+// }
 .card {
   margin: 0;
-  padding: 0.25em;
+  // padding: 0.25em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-width: 10em;
   min-height: 20em;
   font-size: 24px;
   transition: var(--bouncy-transition);
   text-align: center;
+  z-index: 5;
+  composes: cardContainer from './utils.module.scss';
+
   &First {
     @extend .card;
-    background-color: var(--light-grey);
+    // background-color: var(--light-grey);
+    background: linear-gradient(#97b2f2, #b1e7ee);
   }
   &Second {
     @extend .card;
-    // background-color: var(--main-brand-color);
-    background: linear-gradient(var(--light-grey), #9c9c9c3f);
-    // background: linear-gradient(#97f29d, #b1eec2);
+    background: linear-gradient(#97b2f2, #b1e7ee);
+    // background: linear-gradient(var(--light-grey), #9c9c9c3f);
+  }
+}
+@media screen and (max-width: 321px) {
+  .flexContainer {
+    min-width: none;
+    flex-flow: column;
+  }
+
+  .dataChartContainer {
+    min-height: 13em;
   }
 }
 
